--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="(OCR) Analytics"
+        android:text="@string/ocr_analytics"
         android:textColor="@color/white"
         android:textSize="25sp" />
 
@@ -66,8 +66,8 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageIv"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:src="@drawable/baseline_image_24"
+                android:maxHeight="250dp"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 app:strokeWidth="2dp" />
 
